--- a/package.json
+++ b/package.json
@@ -14,21 +14,32 @@
     "lint": "eslint \"src/**/*.ts*\"",
     "serve": "node server/entry.express",
     "start": "npm run dev",
-    "typecheck": "tsc --incremental --noEmit"
+    "typecheck": "tsc --incremental --noEmit",
+    "start:prod": "cross-env NODE_ENV=production && npm run serve",
+    "start:dev": "cross-env NODE_ENV=development && npm run build && npm run serve"
   },
   "devDependencies": {
     "@builder.io/qwik": "0.0.103",
     "@builder.io/qwik-city": "0.0.104",
+    "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
+    "@types/crypto-js": "^4.1.1",
     "@types/eslint": "8.4.5",
     "@types/express": "4.17.13",
+    "@types/express-session": "^1.17.5",
     "@types/node": "latest",
+    "@types/passport": "^1.0.10",
+    "@types/passport-jwt": "^3.0.6",
     "@typescript-eslint/eslint-plugin": "5.30.7",
     "@typescript-eslint/parser": "5.30.7",
     "autoprefixer": "10.4.7",
+    "cross-env": "^7.0.3",
     "eslint": "8.20.0",
     "eslint-plugin-qwik": "0.0.103",
     "express": "4.17.3",
     "node-fetch": "3.2.9",
+    "nodemon": "^2.0.19",
     "postcss": "8.4.14",
     "prettier": "2.7.1",
     "tailwindcss": "3.0.24",
@@ -44,6 +55,13 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.1",
+    "express-session": "^1.17.3",
     "mongoose": "^6.5.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0"
